Fixed result alignment on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -226,7 +226,7 @@ main {
 .result-grid {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: 11em auto;
+  grid-template-columns: auto 10em;
   gap: var(--size-400);
   width: 100%;
 }
